# tradingfuture

./: .gitignore  CODEBASE_ANALYSIS.md  COMPLETE_BUG_FIXES_SUMMARY.md  CORRECTED_ANALYSIS.md  FUTURES_TRADING_GUIDE.md  IMPROVEMENT_SUGGESTIONS.md  MISSION_COMPLETE.md  README.md  additional_bugs_analysis_and_fixes.md  bugs_analysis_and_fixes.md  improvement_suggestions.md  test_additional_bug_fixes.py  test_bug_fixes.py
TradingAgents/: .env.example  .pre-commit-config.yaml  CLAUDE4_QUICKSTART.md  ENVIRONMENT_SETUP.md  IB_SETUP.md  deploy_trading_system.py  improvement_suggestions.md  main.py  pyproject.toml  requirements_ib.txt  strategy_validator.py
TradingAgents/cli/: futures_cli.py  futures_main.py  ib_futures_cli.py  scalping_cli.py
TradingAgents/config_examples/: development.json  production.json
TradingAgents/examples/: __init__.py  claude4_futures_analysis.py
TradingAgents/tests/: __init__.py  conftest.py
TradingAgents/tradingagents/: config.py  default_config.py
TradingAgents/tradingagents/agents/analysts/: analyst_nodes.py  futures_fundamentals_analyst.py  futures_market_analyst.py
TradingAgents/tradingagents/agents/risk_mgmt/: futures_risk_manager.py
TradingAgents/tradingagents/agents/trader/: futures_trader.py
TradingAgents/tradingagents/agents/utils/: agent_utils.py
TradingAgents/tradingagents/backtesting/: __init__.py  engine.py
TradingAgents/tradingagents/brokers/: __init__.py  ib_broker.py  ib_realtime_adapter.py
TradingAgents/tradingagents/core/: __init__.py  circuit_breaker.py  exceptions.py  monitoring.py  resilience.py
TradingAgents/tradingagents/dataflows/: futures_technical_utils.py  futures_utils.py  news_sentinel.py  realtime_news_sentiment.py  realtime_stream.py
TradingAgents/tradingagents/graph/: adaptive_timeframe_graph.py  enhanced_futures_graph.py  futures_trading_graph.py  ib_enhanced_futures_graph.py  trading_graph.py
TradingAgents/tradingagents/strategies/: advanced_futures_strategies.py  advanced_strategies.py  scalping_strategies.py
TradingAgents/tradingagents/utils/: exceptions.py  logging_config.py  retry.py
tradingagents/: default_config.py
tradingagents/agents/risk_mgmt/: futures_risk_manager.py
tradingagents/agents/trader/: futures_trader.py
tradingagents/dataflows/: futures_technical_utils.py  futures_utils.py
